infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agrios-ingress
  namespace: agrios-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - academy.agrios.com
    secretName: agrios-tls
  rules:
  - host: academy.agrios.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: agrios-backend-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: agrios-frontend-svc
            port:
              number: 80
